--- a/abstract.css
+++ b/abstract.css
@@ -105,7 +105,7 @@ body .t{
     border:1px solid black;
     height:215vh;
 }
-@media only screen and (max-width: 36rem)  {
+@media screen and (max-width: 36rem)  {
     *{
         font-size: small;
     }
