--- a/abstract.css
+++ b/abstract.css
@@ -131,6 +131,7 @@ body .t{
      }
      .left a{
          font-size: 1rem;
+         margin-left: -1rem;
          margin-top: auto;
          margin-bottom: auto;
      }
