--- a/abstract.css
+++ b/abstract.css
@@ -152,7 +152,7 @@ body .t{
      }
      .right .b2{
          width: 50%;
-         margin-left: rem;
+         margin-left: -.3rem;
      }
      .c {
          margin-left: 3rem;
