--- a/abstract.css
+++ b/abstract.css
@@ -127,7 +127,8 @@ body .t{
      }
      .in a{
         margin-left: 15rem;
-        margin-top: -4rem;
+        margin-top: -3.5rem;
+        font-size: 1rem;
         
      }
      .left a{
