--- a/abstract.css
+++ b/abstract.css
@@ -109,6 +109,9 @@ body .t{
     height:215vh;
 }
 @media screen and (max-width: 36rem)  {
+    html{
+        overflow-x: hidden;
+    }
     .s{
      height:30vh;
     }
